--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -115,7 +115,7 @@ color: white;
 #course-content .modules-list .module {
     color: white;
     width: 530px;
-    margin: 0 auto 24px;
+    margin: 24px auto 24px;
     border: 1px solid #33A8DB;
     background-color: #252525;
     padding: 16px;
